# TC2Lib--LTSPICE

./: .gitignore  LICENSE  README.md  TCLib  TCLib.cpp  setup-funcs.cpp  setup-funcs.h
Utilidades TC Lib/: Color Switcher.ps1  Help.txt  LTspice.ini
V2_CPP/: Makefile  TCLib.cpp  lib-setup.cpp  setup-funcs.cpp  setup-funcs.h
cmp/: standard.bead  standard.bead.bak  standard.bjt  standard.bjt.bak  standard.cap  standard.dio  standard.dio.bak  standard.ind  standard.ind.bak  standard.jft  standard.mos  standard.mos.bak  user.bjt
resources/: ascii-art.txt  bjt.ini  dark-theme.ini  dio.ini  jft.ini  light-theme.ini  mos.ini
resources/Examples/: Loop Gainer - E3.asc
source/: CMakeLists.txt  TCLib.cpp  setup-funcs.cpp  setup-funcs.h  temp.ini
sub/TCLib/: 74HCU04.lib  Amp_Current.lib  Amp_Transimpedance.lib  BT_TRIAC.lib  BUZ80A.lib  Black_Box.lib  CD4046B.lib  Charge_Pump.lib  Gain_Block.lib  Ideal_comp.lib  LM311.lib  LM741.lib  LM833.lib  L_Tap.lib  OA_Ideal.lib  OA_Param.lib  OA_Param2.lib  OA_Signal.lib  TIP110.lib  TIP115.lib  TL082.lib  TL082_TI.lib  VCO.lib  ampmeter.lib  bypass.lib  fdnr.lib  fdnr_2.lib  gyrator.lib  lamp.lib  modulo_N.lib  modulo_P.lib  npn_ideal - Copy.lib  npn_ideal.lib  pnp_ideal - Copy.lib  pnp_ideal.lib  pot.lib  regulators.lib  square.lib  supply.lib  switch.lib  (+7 more)
sym/: cap.asy  ind.asy  ind2.asy  res.asy  res_rec.asy  res_spring.asy  voltage2.asy
sym/TCLib/: Amp_Current.asy  Amp_Transimpedance.asy  BT_TRIAC.asy  Ideal_Comp.asy  LM311.asy  LM324.asy  LM741.asy  LM833.asy  LMX24.asy  NPN_ideal.asy  OA_Ideal.asy  OA_Ideal_Full.asy  (+25 more)
(+60 files in other folders)
